# reverse_polish_notation_evaluator

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
src/reverse_polish_notation_evaluator/: arithmetic_evaluator.py
tests/reverse_polish_notation_evaluator_tests/: arithmetic_evaluator_tests.py
